# HPC_GPU_NBody_visualisation

./: .gitignore  CMakeLists(cuda).txt  CMakeLists.txt  CMakeLists_GL.txt  README.md
OpenGL_libs/include/: GLTools.h
cuda_kernels/: GL_context.hpp  NBody_cuda.cu  Physics.cuh  Vec3_struct.hpp
include/: Barnes.hpp  Body.hpp  Camera.hpp  Constants.hpp  NBody.hpp  Physics.hpp  Renderer.hpp  Shader.hpp  Vec3.hpp  Viewer.hpp  random_init.hpp
src/: Barnes.cpp  Body.cpp  NBody.cpp  Physics.cpp  Vec3.cpp  Viewer.cpp  main.cpp  random_init.cpp
